k8s/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rqmtmgmt
  labels:
    name: rqmtmgmt
    environment: local
