k8s/local/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: rqmtmgmt
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: rqmtmgmt
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: identityserver-service
  namespace: rqmtmgmt
  labels:
    app: identityserver
spec:
  selector:
    app: identityserver
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
